Fix vertical align of icon in Safari

--- a/client/my-sites/post-relative-time-status/style.scss
+++ b/client/my-sites/post-relative-time-status/style.scss
@@ -33,7 +33,8 @@ a.post-relative-time-status__link {
 
 .post-relative-time-status__time,
 .post-relative-time-status__status {
-	display: inline-block;
+	display: flex;
+	align-items: center;
 	margin-right: 2em;
 }
 
